--- a/openvpn/server/conf/cfn-ovpn-cli-server-tcp1194.conf
+++ b/openvpn/server/conf/cfn-ovpn-cli-server-tcp1194.conf
@@ -12,17 +12,17 @@ remote-cert-tls client
 tls-crypt hmac-sig.key
 dh dh.pem
 ca ca.crt
-cert dh-openvpn-server.crt
-key dh-openvpn-server.key
+cert cfn-ovpn-cli-server.crt
+key cfn-ovpn-cli-server.key
 cipher AES-256-GCM
 auth SHA512
 user nobody
 group nobody
 verb 4
 mute 10
-log-append /var/log/dh-openvpn-server-tcp1194.log
-status dh-openvpn-server-tcp1194.status
-ifconfig-pool-persist dh-openvpn-server-tcp1194.pool
+log-append /var/log/cfn-ovpn-cli-server-tcp1194.log
+status cfn-ovpn-cli-server-tcp1194.status
+ifconfig-pool-persist cfn-ovpn-cli-server-tcp1194.pool
 tls-cipher TLS-ECDHE-ECDSA-WITH-AES-256-GCM-SHA384
 #explicit-exit-notify 3
 reneg-sec 3600
