--- a/cfn-templates/cfn-ovpn-cli-ec2-lt.yaml
+++ b/cfn-templates/cfn-ovpn-cli-ec2-lt.yaml
@@ -27,7 +27,7 @@ Parameters:
     Description: "Name of this Openvpn project"
     ConstraintDescription: "Specify name of the project"
     Type: String
-    Default: "dh-openvpn"
+    Default: "cfn-ovpn-cli"
     MinLength: 3
     MaxLength: 63
     AllowedPattern:
@@ -91,13 +91,13 @@ Resources:
               # https://github.com/aws/aws-cli/issues/1588 bug with --exclude & set -e below
               # aws s3 sync s3://${ProjectName}/openvpn/server/crt/ /tmp --exclude "*" --include "*server-crt.tar.gz"
               # Download Server Certs & start Openvpn dual-protocol service
-              aws s3 cp s3://${ProjectName}/openvpn/server/crt/dh-openvpn-server-crt.tar.gz /tmp
+              aws s3 cp s3://${ProjectName}/openvpn/server/crt/cfn-ovpn-cli-server-crt.tar.gz /tmp
               tar -xzf /tmp/*server-crt.tar.gz -C /etc/openvpn/server/
               rm /tmp/*server-crt.tar.gz
-              systemctl enable openvpn-server@dh-openvpn-server-udp1194
-              systemctl enable openvpn-server@dh-openvpn-server-tcp1194
-              systemctl start openvpn-server@dh-openvpn-server-udp1194
-              systemctl start openvpn-server@dh-openvpn-server-tcp1194
+              systemctl enable openvpn-server@cfn-ovpn-cli-server-udp1194
+              systemctl enable openvpn-server@cfn-ovpn-cli-server-tcp1194
+              systemctl start openvpn-server@cfn-ovpn-cli-server-udp1194
+              systemctl start openvpn-server@cfn-ovpn-cli-server-tcp1194
               # Health Checks facilitated by httpd Port 80
               systemctl enable httpd
               systemctl start httpd
